<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Sensor fusion demo</string>
  <string name="action_about">About</string>
  <string name="title_main_activity">Sensor fusion demo</string>
  <string name="title_section1">Kalman filter</string>
  <string name="title_section2">Adaptive Kalman filter</string>
  <string name="title_section3">Android Rotation Vector</string>
  <string name="title_section4">Calibrated gyroscope</string>
  <string name="title_section5">Gravometer + Compass</string>
  <string name="title_section6">Accelerometer + Compass</string>
  <string name="title_activity_sensor_selection">Sensor fusion demo</string>
  <string name="gyroscope_missing">Gyroscope Missing</string>
  <string name="gyroscope_missing_message">Your device has no hardware gyroscope sensor, which would be necessary for this app to work properly. Please run it on a newer device that has a gyroscope.</string>
  <string name="OK">OK</string>

</resources>
