<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_section1"
      android:title="@string/title_section1"
      android:visible="true"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_section2"
      android:title="@string/title_section2"
      android:visible="false"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_section3"
      android:title="@string/title_section3"
      android:visible="false"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_section4"
      android:title="@string/title_section4"
      android:visible="true"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_section5"
      android:title="@string/title_section5"
      android:visible="true"
      app:showAsAction="never"/>

  <item
      android:id="@+id/action_section6"
      android:title="@string/title_section6"
      android:visible="true"
      app:showAsAction="never"/>

</menu>
